Basic websocket connection + Pet Counter

--- a/templates/template.html
+++ b/templates/template.html
@@ -11,7 +11,11 @@
     </header>
     <main>
         <p>Welcome, {{ .User }}! We're glad to have you here.</p>
+		<h2 id='pet-counter'>Henry has been pet 0 times!</h2>
 		<button id='pet-henry-btn'>Pet Henry</button>
+		<br>
+		<input type='text' id='chat-content'>
+		<button id='send-chat-btn'>Send chat</button>
 		<script src="../static/script.js"></script>
     </main>
     <footer>
